finish 1st draft of circuit.html, fix index btn problem

--- a/index.html
+++ b/index.html
@@ -72,17 +72,15 @@
             <p>
               Venez inspecter le code utilisé pour programmer la carte Arduino.
             </p>
-            <a href="code.html" class="btn btn-info">Voir</a>
           </div>
           <div class="col-sm-4">
             <a href="circuit.html" class="thumbnail">
-              <img class="img-responsive" src="imgs/placeholder.png"/>
+              <img class="img-responsive" src="imgs/thumb_sanscapteurs.png"/>
             </a>
             <h3>Circuit et plomberie</h3>
             <p>
               Voir le circuit électronique qui contrôle les valves.
             </p>
-            <a href="circuit.html" class="btn btn-info">Voir</a>
           </div>
           <div class="col-sm-4">
             <a href="experience.html" class="thumbnail">
@@ -92,9 +90,44 @@
             <p>
               Comprendre l'expérience, les méthodes utilisées et ses résultats
             </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-4">
+            <a href="code.html" class="btn btn-info">Voir</a>
+          </div>
+          <div class="col-sm-4">
+            <a href="circuit.html" class="btn btn-info">Voir</a>
+          </div>
+          <div class="col-sm-4">
             <a href="experience.html" class="btn btn-info">Voir</a>
           </div>
         </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       </div>
 
 
