add thumbnail for experiment

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
           <div class="col-sm-4">
             <a href="experience.html" class="thumbnail">
-              <img class="img-responsive" src="imgs/placeholder.png"/>
+              <img class="img-responsive" src="imgs/thumb_courbe_etalonnage.png"/>
             </a>
             <h3>Expérience</h3>
             <p>
