add footer to circuit.html

--- a/circuit.html
+++ b/circuit.html
@@ -185,16 +185,35 @@
                     </figcaption>
                 </figure>
             </div>
-            <!-- Modal -->
-            <div id="modal" class="modal">
-                <!-- Close Button -->
-                <span class="close">&times;</span>
-                <!-- Image -->
-                <img class="modal-content" id="img01" />
-                <!-- Caption -->
-                <div id="caption"></div>
-            </div>
+        </div>
 
+
+        <!-- Modal -->
+        <div id="modal" class="modal">
+            <!-- Close Button -->
+            <span class="close">&times;</span>
+            <!-- Image -->
+            <img class="modal-content" id="img01" />
+            <!-- Caption -->
+            <div id="caption"></div>
+        </div>
+
+
+        <!-- Footer -->
+        <div class="navbar navbar-inverse navbar-static-bottom">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <p class="navbar-text navbar-right">GFBienne, 2016-2017</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
