--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
 
     <!-- Navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div id="navbar-top" class="navbar navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -48,7 +48,10 @@
           </ul>
         </div>
       </div>
+
+
     </div>
+
 
     <!-- Main page -->
 
@@ -62,11 +65,11 @@
       </div>
 
       <!-- Main container -->
-      <div class="container" id="thumbnails">
+      <div id="main" class="container" id="thumbnails">
         <div class="row">
           <div class="col-sm-4">
             <a href="code.html" class="thumbnail">
-              <img class="img-responsive" src="imgs/placeholder.png"/>
+              <img class="img-responsive" src="imgs/thumb_code.png"/>
             </a>
             <h3>Code Arduino</h3>
             <p>
@@ -107,45 +110,24 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
       </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+      <!-- Footer -->
+      <div class="navbar navbar-inverse navbar-static-bottom">
+          <div class="container">
+              <div class="navbar-header">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  </button>
+              </div>
+              <div class="navbar-collapse collapse">
+                  <p class="navbar-text navbar-right">GFBienne, 2016-2017</p>
+              </div>
+          </div>
+      </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
