finish styling index

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- Jumbotron -->
       <div class="jumbotron">
         <div class="container">
-          <h1>Jarduino</h1>
+          <img id="jumbotron-logo" class="img-responsive" src="imgs/logo_vert.png" alt="Jarduino">
           <hr class="hline" />
           <p>Arrosage automatique des plantes</p>
         </div>
