style other pages

--- a/circuit.html
+++ b/circuit.html
@@ -27,13 +27,14 @@
 
         <!-- Custom css -->
         <link rel="stylesheet" href="css/circuit.css" />
+        <link rel="stylesheet" href="css/main.css" />
 
         <!-- Custom js -->
         <script src="js/circuit-modal.js"></script>
     </head>
     <body>
         <!-- Navbar -->
-        <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -200,7 +201,7 @@
 
 
         <!-- Footer -->
-        <div class="navbar navbar-inverse navbar-static-bottom">
+        <div class="navbar navbar-static-bottom">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
