--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <!-- Custom css -->
     <link rel="stylesheet" href="css/index.css" />
 
+    <!-- Custom js -->
+    <script src="js/index.js"></script>
   </head>
   <body>
 
@@ -96,7 +98,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div id="buttons" class="row">
           <div class="col-sm-4">
             <a href="code.html" class="btn btn-info">Voir</a>
           </div>
@@ -115,17 +117,7 @@
       <!-- Footer -->
       <div class="navbar navbar-inverse navbar-static-bottom">
           <div class="container">
-              <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  </button>
-              </div>
-              <div class="navbar-collapse collapse">
                   <p class="navbar-text navbar-right">GFBienne, 2016-2017</p>
-              </div>
           </div>
       </div>
 
