change experience.html text

--- a/experience.html
+++ b/experience.html
@@ -61,9 +61,8 @@
             <p>Le but de ce projet était de déterminer le poucentage d'humidité idéal d'un pot de terre pour qu'une plante
             puisse pousser de la façon la plus efficace possible.
             Nous avons donc choisi de construire un système d'arrosage automatique répondant à ses besoins en eau.</p>
-            <p>Nous avons choisi de nous intéresser à ce sujet car, étant passionnés de programmation et de robotique
-            , nous voulions en intégrer dans notre projet et c'est la première idée qui nous est venue en tête lorsqu'on
-            nous a parlé d'un projet en lien avec la terre.</p>
+            <p>Nous avons décidé de réaliser ce projet parce que nous sommes intéressés par la programmation et la robotique. C'est donc une des premières idées qui nous est venue en tête lorsque nous avons
+            appris les conditions que devaient remplir le projet.</p>
 
             <h3>Pré-projet</h3>
             <p>Avant même de démarrer l'expérience, il nous a fallu créer un budget, car nous ne disposions pas de tous les
