--- a/experience.html
+++ b/experience.html
@@ -58,7 +58,7 @@
             <h1>Expérience</h1>
 
             <h3>Présentation</h3>
-            <p>Le but de ce projet était de déterminer le poucentage d'humidité idéal d'un pot de terre pour qu'une plante
+            <p>Le but de ce projet était de créer un système d'arrosage automatique. De manière secondaire on pouvait également déterminer le poucentage d'humidité idéal d'un pot de terre pour qu'une plante
             puisse pousser de la façon la plus efficace possible.
             Nous avons donc choisi de construire un système d'arrosage automatique répondant à ses besoins en eau.</p>
             <p>Nous avons décidé de réaliser ce projet parce que nous sommes intéressés par la programmation et la robotique. C'est donc une des premières idées qui nous est venue en tête lorsque nous avons
@@ -68,11 +68,11 @@
             <p>Avant même de démarrer l'expérience, il nous a fallu créer un budget, car nous ne disposions pas de tous les
             composants nécessaires au déroulement du projet.
             Cela nous a donc forcé à bien réfléchir à tous les éléments dont nous aurions besoin et à faire attention à ce
-            qu'ils ne soient pas trop chers.</p>
+            qu'ils ne soient pas trop chers. Nous en avons déduis qu'il était mieux de faire l'expérience avec 3 pots, 2 n'étant pas assez et 4 étant trop cher.</p>
             <p>Concernant la plante que nous allions faire pousser, nous en voulions une qui puisse grandir assez haut et
             rapidement pour que l'on puisse mesurer une différence notable entre les différentes pousses.
-            Après recherches et réflexion, nous avons décidé de nous arrêter sur les haricots, car c'est un plante qui pousse
-            relativement rapidement, qui atteint une hauteur acceptable et que nous avions directement à disposition.</p>
+            Après recherches et réflexion, nous avons décidé de nous arrêter sur les haricots, car c'est une plante qui pousse
+            relativement rapidement et atteint une hauteur acceptable. De plus, nous en avions directement à disposition au gymnase.</p>
 
             <h3>Déroulement de l'expérience</h3>
             <p>Tout d'abord, nous nous sommes séparés en deux groupes : l'un préparait <a href="circuit.html">le circuit et
@@ -85,7 +85,7 @@
             et les valeurs retournées par l'Arduino.</p>
             <p>Pour ce faire, nous avons pesé 5 échantillons de terre que nous avions mouillés à différents degrés, allant de
             complétement sec à très mouillé. Puis, nous avons pris les valeurs retournées par chaque capteur pour chaque
-            échantillon et en avons fait la moyenne. Nous avons ensuite séché toutes les terres et les avons pesé une deuxième
+            échantillon et en avons fait la moyenne. Nous avons ensuite séché toutes les terres et les avons pesées une deuxième
             fois.<br/>
             La différence entre la masse de terre mouillée et de terre sèche nous a permis de déduire la masse d'eau contenue dans
             chaque échantillon. Nous n'avions plus qu'à faire le rapport masse d'eau sur masse totale pour avoir notre pourcentage
@@ -93,6 +93,12 @@
             <p>Nous avons ensuite mis ces valeurs et cells de l'Arduino dans un logiciel d'analyse de données, ce qui nous a permis
             de créer notre courbe d'étalonnage, qui allait nous servir à donner des valeurs raisonnables à l'Arduino pour que les
             haricots n'aient ni trop, ni pas assez d'eau.</p>
+            
+            <h3>Problèmes rencontrés</h3>
+            <p>Durant l'expérience, nous avons rencontrés deux problèmes principaux.</p>
+            <p>Le premier problème est venu du fait que les piles alimentant l'Arduino n'ont pas tenu une semaine. Par conséquent, le système d'arrosage a arrêté de fonctionner pendant quelques jours.
+            Cela n'a cependant pas créer de décalage entre l'humidité de chaque pot, puisque ils ont tous subis cette panne. La solution au problème a été de brancher l'Arduino au secteur grâce à un chargeur 9V.</p>
+            <p>Vers la fin de l'expérience, nous avons découvert qu'un des capteurs avait cessé de fonctionné durant la nuit. Nous avons donc immédiatement stoppé l'expérience au stade où elle se trouvait. Nous avons constaté l'état des plantes et jugé que nous pouvions terminer le test.</p>
 
             <div class="row">
                 <div class="col-sm-8">
@@ -101,6 +107,7 @@
             </div>
 
             <h3>Résultats</h3>
+            
             <p></p>
 
             <h3>Conclusion</h3>
