add some more content

--- a/experience.html
+++ b/experience.html
@@ -98,7 +98,8 @@
             <p>Durant l'expérience, nous avons rencontrés deux problèmes principaux.</p>
             <p>Le premier problème est venu du fait que les piles alimentant l'Arduino n'ont pas tenu une semaine. Par conséquent, le système d'arrosage a arrêté de fonctionner pendant quelques jours.
             Cela n'a cependant pas créer de décalage entre l'humidité de chaque pot, puisque ils ont tous subis cette panne. La solution au problème a été de brancher l'Arduino au secteur grâce à un chargeur 9V.</p>
-            <p>Vers la fin de l'expérience, nous avons découvert qu'un des capteurs avait cessé de fonctionné durant la nuit. Nous avons donc immédiatement stoppé l'expérience au stade où elle se trouvait. Nous avons constaté l'état des plantes et jugé que nous pouvions terminer le test.</p>
+            <p>Vers la fin de l'expérience, nous avons découvert qu'un des capteurs avait cessé de fonctionné durant la nuit. Nous avons donc immédiatement stoppé l'expérience au stade où elle se trouvait.
+            Nous avons constaté l'état des plantes et jugé que nous pouvions terminer le test.</p>
 
             <div class="row">
                 <div class="col-sm-8">
@@ -108,7 +109,7 @@
 
             <h3>Résultats</h3>
             
-            <p></p>
+            <p>Malgré les problèmes rencontrés, le système d'arrosage a bien fonctionné et nous sommes satisafait du résultat. Nous avons déterminer que</p>
 
             <h3>Conclusion</h3>
             <p></p>
