fix C style comments in code

--- a/code.html
+++ b/code.html
@@ -71,10 +71,10 @@
                 <div class="col-sm-6">
                     <pre>
                         <code>
-# Général
+// Général
 int frequence = 500; 
 
-# Spécifique à chaque système (ici le premier)
+// Spécifique à chaque système (ici le premier)
 int system1Pin = 2;
 int sensor1Pin = 1;
 int sensor1Limit = 639;
@@ -92,7 +92,7 @@ int delay1 = 0;
                 <div class="col-sm-6">
                     <pre>
                         <code>
-# Ouverture
+// Ouverture
 
 void openValve(int systemPin){
     digitalWrite(systemPin, HIGH);
@@ -104,7 +104,7 @@ void openValve(int systemPin){
                 <div class="col-sm-6">
                     <pre>
                         <code>
-# Fermeture
+// Fermeture
 
 void closeValve(int systemPin){
     digitalWrite(systemPin, LOW);
