--- a/experience.html
+++ b/experience.html
@@ -97,6 +97,7 @@
             <p>Nous avons ensuite mis ces valeurs et cells de l'Arduino dans un logiciel d'analyse de données, ce qui nous a permis
             de créer notre courbe d'étalonnage, qui allait nous servir à donner des valeurs raisonnables à l'Arduino pour que les
             haricots n'aient ni trop, ni pas assez d'eau.</p>
+            <p>Nous avons alors mis en commun notre travail. Le sytème étant pret, nous avons cherché une salle correctement éclairée afin de l'y installer. L'installation se trouvait prêt d'un évier pour éviter les dégâts dans le cas d'une fuite. Nous avons ensuite laissé le système en marche en faisant des contrôles réguliers.
 
             <div class="row">
                 <div class="col-sm-8">
@@ -117,6 +118,7 @@
             En effet, le haricot ayant le plus poussé se trouvait dans le pot à 25% d'humidité. La différence de croissance entre les
             plantes était telle que nous n'avons pas eu besoin de les mesurer. Celle dans le pot à 20% était donc considérablement plus petite
             que la première, mais tout de même plus grande que le haricot à 15% d'eau.</p>
+            <p>Il est évident que les résultats trouvés lors de cette expérience ne sont que peu satisfaisants. Il reste encore une grande imprécision dans les valeurs trouvées, mais il est désormais possible de les améliorer. En effet, notre approche a été plus concentrée sur la méthode que les résultats. Grâce cette dernière, il est désormais possible de se rapprocher de la valeur idéale exacte. Il suffit de répéter l'expérience en diminuant l'écart entre les valeurs de tests.</p>
 
             <h3>Conclusion</h3>
             <p>Nous avons donc obtenu des résultats concluants, car nous avons réussi à remarquer un écart de hauteur notable entre les
