add 3 images to experience.html

--- a/experience.html
+++ b/experience.html
@@ -99,12 +99,35 @@
             haricots n'aient ni trop, ni pas assez d'eau.</p>
             <p>Nous avons alors mis en commun notre travail. Le sytème étant pret, nous avons cherché une salle correctement éclairée afin de l'y installer. L'installation se trouvait prêt d'un évier pour éviter les dégâts dans le cas d'une fuite. Nous avons ensuite laissé le système en marche en faisant des contrôles réguliers.
 
+            <img class="img-responsive img-standard" src="imgs/courbe_etalonnage.png" alt="Courbe d'étalonnage" />
+
             <div class="row">
-                <div class="col-sm-8">
-                    <img class="img-responsive img-standard" src="imgs/courbe_etalonnage.png" alt="Courbe d'étalonnage" />
+                <div class="col-sm-4">
+                    <figure>
+                        <img class="img-responsive img-standard img-tuyaux" src="imgs/plantes_debut.jpg" alt="Le système de tuyauterie">
+                        <figcaption>
+                            Les plantes au début de l'expérience
+                        </figcaption>
+                    </figure>
+                </div>
+                <div class="col-sm-4">
+                    <figure>
+                        <img class="img-responsive img-standard img-tuyaux" src="imgs/plantes_milieu.jpg" alt="Le système de tuyauterie">
+                        <figcaption>
+                            Après une semaine
+                        </figcaption>
+                    </figure>
+                </div>
+                <div class="col-sm-4">
+                    <figure>
+                        <img class="img-responsive img-standard img-tuyaux" src="imgs/plantes_fin.jpg" alt="Le système de tuyauterie">
+                        <figcaption>
+                            A la fin de l'expérience
+                        </figcaption>
+                    </figure>
                 </div>
             </div>
-
+                
             <h3>Problèmes rencontrés</h3>
             <p>Durant l'expérience, nous avons rencontré deux problèmes principaux :</p>
             <p>Le premier problème est venu des piles alimentant l'Arduino qui n'ont pas tenu une semaine. Par conséquent, le système d'arrosage a arrêté de fonctionner pendant quelques jours.
