unsuccesfully try to center and resize image but commit anyway

--- a/experience.html
+++ b/experience.html
@@ -99,7 +99,13 @@
             haricots n'aient ni trop, ni pas assez d'eau.</p>
             <p>Nous avons alors mis en commun notre travail. Le sytème étant pret, nous avons cherché une salle correctement éclairée afin de l'y installer. L'installation se trouvait prêt d'un évier pour éviter les dégâts dans le cas d'une fuite. Nous avons ensuite laissé le système en marche en faisant des contrôles réguliers.
 
-            <img class="img-responsive img-standard" src="imgs/courbe_etalonnage.png" alt="Courbe d'étalonnage" />
+            <div style="margin: 0 auto max-width: 850px">
+                <figure>
+                    <img class="img-responsive img-standard" src="imgs/courbe_etalonnage.png" alt="Courbe d'étalonnage" />
+                    <figcaption>
+                    </figcaption>
+                </figure>
+            </div>
 
             <div class="row">
                 <div class="col-sm-4">
