Fix mobile version bugs

--- a/circuit.html
+++ b/circuit.html
@@ -64,11 +64,11 @@
             <h1>Circuit et tuyauterie</h1>
 
             <p>
-                Cet appareil est séparé en deux grandes parties : Le circuit électronique et le système de 
-                plombrerie. Une puce Arduino est connectée à des capteurs d'humidité placés dans les pots. 
-                Cette puce lit les données de ces capteurs et décide d'arroser les plantes ou non. Si 
-                l'humidité passe en dessous d'un certain seuil (défini à l'avance), l'Arduino envoie un signal 
-                électrique qui active les valves. Ces valves sont reliées à un robinet et au pots. Elles ne 
+                Cet appareil est séparé en deux grandes parties : Le circuit électronique et le système de
+                plombrerie. Une puce Arduino est connectée à des capteurs d'humidité placés dans les pots.
+                Cette puce lit les données de ces capteurs et décide d'arroser les plantes ou non. Si
+                l'humidité passe en dessous d'un certain seuil (défini à l'avance), l'Arduino envoie un signal
+                électrique qui active les valves. Ces valves sont reliées à un robinet et au pots. Elles ne
                 laissent passer l'eau que lorsqu'elles reçoivent un courant électrique.
             </p>
 
@@ -206,20 +206,16 @@
 
 
         <!-- Footer -->
-        <div class="navbar navbar-static-bottom">
+        <!-- Footer -->
+        <div class="navbar navbar-inverse navbar-static-bottom">
             <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    </button>
-                </div>
-                <div class="navbar-collapse collapse">
                     <p class="navbar-text navbar-right">GFBienne, 2016-2017</p>
-                </div>
             </div>
         </div>
+
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/bootstrap.min.js"></script>
     </body>
 </html>
