--- a/code.html
+++ b/code.html
@@ -72,9 +72,9 @@
                 <div class="col-sm-6">
                     <pre>
                         <code>
-                        
+
 // Général
-int frequence = 500; 
+int frequence = 500;
 
 // Spécifique à chaque système (ici le premier)
 int system1Pin = 2;
@@ -246,21 +246,15 @@ void loop() {
 
 
         <!-- Footer -->
-        <div class="navbar navbar-static-bottom">
+        <!-- Footer -->
+        <div class="navbar navbar-inverse navbar-static-bottom">
             <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    </button>
-                </div>
-                <div class="navbar-collapse collapse">
                     <p class="navbar-text navbar-right">GFBienne, 2016-2017</p>
-                </div>
             </div>
         </div>
-
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/bootstrap.min.js"></script>
     </body>
 </html>
