--- a/experience.html
+++ b/experience.html
@@ -30,7 +30,7 @@
     </head>
     <body>
         <!-- Navbar -->
-        <div class="navbar navbar-fixed-top">
+        <div id="navbar-top" class="navbar navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="index.html#">Jarduino</a>
+              <a class="navbar-brand" href="#">Jarduino</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
@@ -133,7 +133,7 @@
                     </figure>
                 </div>
             </div>
-                
+
             <h3>Problèmes rencontrés</h3>
             <p>Durant l'expérience, nous avons rencontré deux problèmes principaux :</p>
             <p>Le premier problème est venu des piles alimentant l'Arduino qui n'ont pas tenu une semaine. Par conséquent, le système d'arrosage a arrêté de fonctionner pendant quelques jours.
@@ -170,20 +170,14 @@
 
 
         <!-- Footer -->
-        <div class="navbar navbar-static-bottom">
+        <!-- Footer -->
+        <div class="navbar navbar-inverse navbar-static-bottom">
             <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    </button>
-                </div>
-                <div class="navbar-collapse collapse">
                     <p class="navbar-text navbar-right">GFBienne, 2016-2017</p>
-                </div>
             </div>
         </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
     </body>
 </html>
